# quadSim

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  setup.sh
QuadSimDevlog/: .$IncludesFlowchartScratch.drawio.bkp  .$System Flowchart.drawio.bkp  IncludesFlowchartScratch.drawio  System Flowchart.drawio
QuadSimDevlog/.obsidian/: workspace.json
QuadSimDevlog/Devlogs/: DevLog_1_2026_01_27.md  DevLog_2_2026_01_29.md  DevLog_3_2026_02_08.md  DevLog_4_2026_02_16.md  DevLog_5_2026_02_19.md  Devlog_6_2026_03_24.md
automations/: activatePython.sh  runTestOdeAndVisualize.sh  visualzeQuadRun.sh
automations/helpers/: visualizeOdeTester.py  visualizeQuad.py
automations/outputs/: testSimOutputData.csv
godot/: icon.svg.import  project.godot
src/: CMakeLists.txt  CMakeListsBackup.txt  test.cpp
src/run/: testExe.cc  testExeNoLib.cc  tobeImportedTest.cc  tobeImportedTest.h
src/sandbox/: CMakeLists.txt
src/sandbox/testOdeFunc/: CMakeLists.txt  odeFunc.cc
src/sandbox/testQuadOdeFunc/: CMakeLists.txt  testQuadOdeFunc.cc
src/sandbox/testQuadParams/: CMakeLists.txt  sampleQuad.param  testQuadParams.cc
src/sandbox/testSim/: CMakeLists.txt  testSim.cc
src/simulator/: CMakeLists.txt  poseModules.h  quadController.cc  quadController.h  quadParams.cc  quadParams.h  quadState.h  sensors.h  sim.h  utils.h
